--- a/us-east-2_create-dockerhost-ami.json
+++ b/us-east-2_create-dockerhost-ami.json
@@ -2,6 +2,7 @@
   "variables": {
     "aws_access_key": "{{env `AWS_ACCESS_KEY_ID`}}",
     "aws_secret_key": "{{env `AWS_SECRET_ACCESS_KEY`}}",
+    "region": "us-east-2",
     "source_ami_id": "ami-8b92b4ee",
     "name": "docker-ce-base",
     "packer_ami_name": "ubuntu-xenial-docker-ce-base",
@@ -13,7 +14,7 @@
       "type": "amazon-ebs",
       "access_key": "{{user `aws_access_key`}}",
       "secret_key": "{{user `aws_secret_key`}}",
-      "region": "us-east-2",
+      "region": "{{user `region`}}",
       "vpc_id": "",
       "subnet_id": "",
       "source_ami": "{{user `source_ami_id`}}",
@@ -49,6 +50,11 @@
       "destination": "/tmp/cleanup.sh"
     },
     {
+      "type": "file",
+      "source": "files/awslogs.conf",
+      "destination": "/tmp/awslogs.conf"
+    },
+    {
       "type": "shell",
       "execute_command": "echo 'packer' | sudo -S sh -c '{{ .Vars }} {{ .Path }}'",
       "inline": [
@@ -60,7 +66,10 @@
         "./bootstrap_docker_ce.sh",
         "sleep 10",
         "./cleanup.sh"
-      ]
+      ],
+      "environment_variables": {
+        "REGION": "{{user `region`}}"
+      }
     }
   ]
 }
